--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,6 @@ chrono = { version = "0.4.38", features = ["serde"] }
 pest = { version = "2.7.10", features = ["pretty-print"] }
 pest_derive = "2.7.10"
 regex = "1.10.4"
+rhai = { version = "1.18.0", features = ["serde"] }
+serde = { version = "1.0.202", features = ["derive"] }
 winnow = { version = "0.6.8", features = ["simd"] }
